--- a/110119104078_syedafzal.ipynb
+++ b/110119104078_syedafzal.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/AfzalSyed0078/IBM-Project-15578-1659601085/blob/main/110119104078_syedafzal.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "McSxJAwcOdZ1"
       },
       "source": [
@@ -44,7 +34,7 @@
       "execution_count": null,
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "1577912a-0472-4722-fc02-d71f68ff94fb"
+        "outputId": "2e32c43c-4333-48d6-e045-b853e0b1cec0"
       },
       "outputs": [
         {
@@ -91,7 +81,7 @@
       "metadata": {
         "id": "HyRyJv6CYPb4",
         "scrolled": true,
-        "outputId": "3113c668-2672-4019-d3a6-d1a31527b487"
+        "outputId": "d3052cc8-17ba-4395-90c6-3333bde4816a"
       },
       "outputs": [
         {
@@ -131,7 +121,7 @@
       "execution_count": null,
       "metadata": {
         "id": "MvbkMZpXYRaw",
-        "outputId": "d9f8ae26-ae33-4819-9910-5775dfd5e02c"
+        "outputId": "79dc3772-df12-4002-b415-18f6e6975ebf"
       },
       "outputs": [
         {
@@ -181,7 +171,7 @@
       "execution_count": null,
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "5fef1861-0950-4f75-f791-ce429df10360"
+        "outputId": "e3eabd33-2df2-4134-cae4-3d0f216e2ea2"
       },
       "outputs": [
         {
@@ -204,7 +194,7 @@
       "execution_count": null,
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "9ab11a86-2e34-409a-ba20-0ebb0cd16939"
+        "outputId": "67032303-b2a8-41c3-eee8-3dd2b0879b34"
       },
       "outputs": [
         {
@@ -236,7 +226,7 @@
       "execution_count": null,
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "32086606-2081-4e51-f834-f89df4007bec"
+        "outputId": "9a0f4860-4f3e-4fa4-8488-d249599d6a83"
       },
       "outputs": [
         {
@@ -268,7 +258,7 @@
       "execution_count": null,
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "f840e495-1022-4cfb-e0b7-3d645f06f599"
+        "outputId": "6a9f7fc0-c1bd-4458-df99-90920e1f4154"
       },
       "outputs": [
         {
@@ -303,7 +293,7 @@
       "execution_count": null,
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "db2ad52c-fc19-4739-ed58-8b257f238308"
+        "outputId": "a45aa162-b177-4dd0-94fd-c70a1d47f5a8"
       },
       "outputs": [
         {
@@ -356,7 +346,7 @@
       "execution_count": null,
       "metadata": {
         "id": "xNpI_XXoYhs0",
-        "outputId": "579aa8d8-a2cb-43ad-fe28-586020f6c4f5"
+        "outputId": "d2101b64-2041-44d8-b598-f24ae9b23e44"
       },
       "outputs": [
         {
@@ -388,7 +378,7 @@
       "execution_count": null,
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "dbb069bb-51f2-427f-abb3-1fc93b040371"
+        "outputId": "a699e8ed-033f-439a-fff9-56813b7c9639"
       },
       "outputs": [
         {
@@ -446,7 +436,7 @@
       "metadata": {
         "id": "knH76sDKYsVX",
         "scrolled": false,
-        "outputId": "58fb5f94-7c42-4dc9-e919-8e61fe695ca3"
+        "outputId": "ee4e4a71-7d7c-45dd-97e0-0e9228f64971"
       },
       "outputs": [
         {
@@ -469,7 +459,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Yh4V-QXm3UiU"
+        "id": "1bcDr3vq4epD"
       },
       "outputs": [],
       "source": [
@@ -480,8 +470,7 @@
   "metadata": {
     "colab": {
       "collapsed_sections": [],
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
